# jpick

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  TODO.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
include/jpick/: json.hpp  lexer.hpp  parser.hpp  query.hpp  serializer.hpp
src/: json.hpp  lexer.hpp  main.cpp  parser.hpp  query.hpp  serializer.hpp
tests/: test_jpick.cpp
